--- a/blocks/element/__trash-button/element__trash-button.css
+++ b/blocks/element/__trash-button/element__trash-button.css
@@ -3,7 +3,7 @@
   height: 100%;
   align-self: center;
   background-color: transparent;
-  background-image: url('../../../images/trash.svg');
+  background-image: url('../../../images/Trash.svg');
   background-repeat: no-repeat;
   background-position: center;
   border: none;
